--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "repository": "https://github.com/newbornfrontender/rollup-lit-apollo-example.git",
   "author": "Infant Frontender <newbornfrontender@gmail.com>",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "lit-apollo": "^0.6.8"
+  }
 }
