--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
   "private": true,
   "dependencies": {
     "lit-apollo": "^0.6.8"
+  },
+  "devDependencies": {
+    "rollup": "^0.67.0",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-node-resolve": "^3.4.0"
   }
 }
